---------------------------------------------------------------------------------------------------
Version: 1.4.2
Date: 14. 3. 2025
  Changes:
    - Added refined concrete to scrap recycling recipe results (because it's needed on Fulgora for EM plants and rail ramps, but it requires water).
  Compatibility:
    - Handle upcoming item name changes in Rusting Iron mod.
---------------------------------------------------------------------------------------------------
Version: 1.4.1
Date: 10. 2. 2025
  Bugfixes:
    - Fixed crash when sulfuric acid recipe has order set to nil somehow.
---------------------------------------------------------------------------------------------------
Version: 1.4.0
Date: 16. 12. 2024
  Graphics:
    - Polysalts and Fulgoran sludge now use icons by Malcolm Riley.
  Balancing:
    - Fulgorite shards now produce 2x holmium powder for balance against other sources of holmium powder.
    - Added setting to remove accumulators from the game, off by default.
  Changes:
    - Recycling a charged battery now gives back the uncharged battery.
    - Added PowerMultiplier compatibility - power multipliers will ignore battery chargers.
---------------------------------------------------------------------------------------------------
Version: 1.3.0
Date: 10. 12. 2024
  Changes:
    - Holmium powder sprites on belts are now smaller and have more variations so they look less dumb.
    - Battery dischargers now produce 2MW instead of 1MW. Chargers are still 1MW.
---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 10. 12. 2024
  Bugfixes:
    - Battery charger and discharger changed from 5MW to 1MW to match recipes.
  Changes:
    - Improved item sounds.
    - Capacities of batteries multiplied by 5 for balance.
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 9. 12. 2024
  Features: