@@ -69,9 +69,11 @@ battery=Battery
 
 [mod-setting-name]
 FulgoraLives-remove-accumulators=Remove accumulators
+FulgoraLives-increase-power-consumption=Increase power consumption
 
 [mod-setting-description]
 FulgoraLives-remove-accumulators=If enabled, accumulators will be impossible to craft and removed from all recipes and techs, leaving battery chargers and dischargers as your only option. This makes power management much harder on Fulgora and anywhere you use solar power.
+FulgoraLives-increase-power-consumption=Make EM plants and recyclers consume more power, to make battery logistics more necessary on Fulgora.
 
 [tile-name]
 ; Rename tiles from "oil" to "sludge".
