@@ -2,7 +2,9 @@
 Version: 1.4.2
 Date: 14. 3. 2025
   Changes:
+    - Added option to disable increased power consumption of EM plants and recyclers.
     - Added refined concrete to scrap recycling recipe results (because it's needed on Fulgora for EM plants and rail ramps, but it requires water).
+    - Sludge is no longer needed for breeding electrophages, making them more feasible as a source of nutrients on other planets (still requires imported electrolyte).
   Compatibility:
     - Handle upcoming item name changes in Rusting Iron mod.
 ---------------------------------------------------------------------------------------------------
